fix: 90_Isolation_Forest_Anomaly_Detection - cell 6

--- a/90_Isolation_Forest_Anomaly_Detection.ipynb
+++ b/90_Isolation_Forest_Anomaly_Detection.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "61ffa0c1",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a59ddeec",
    "metadata": {},
    "outputs": [
@@ -132,15 +132,16 @@
     "## Wizualizacja Granic Decyzyjnych\n",
     "\n",
     "Narysujemy mapę poziomic (Contour Plot).\n",
-    "Ciemne obszary = \"Bezpieczna strefa\" (Normalność).\n",
-    "Jasne/Czerwone obszary = \"Strefa zagrożenia\" (Anomalia).\n",
+    "\n",
+    "*   **Czerwone/Żółte centrum:** \"Bezpieczna strefa\" (Normalność). Tutaj funkcja decyzyjna ma wysokie wartości, co oznacza duże zagęszczenie danych.\n",
+    "*   **Niebieskie/Granatowe tło:** \"Strefa zagrożenia\" (Anomalia). Tutaj funkcja decyzyjna ma niskie wartości, co oznacza, że algorytm szybko \"odizolował\" te punkty.\n",
     "\n",
     "Zauważysz, że Isolation Forest nie rysuje idealnych kółek (jak Gaussian), ale poszarpane prostokąty – to efekt losowych cięć pionowych i poziomych."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "392276f3",
    "metadata": {},
    "outputs": [
@@ -164,15 +165,16 @@
     "plt.figure(figsize=(10, 7))\n",
     "\n",
     "# Rysujemy mapę (poziomice)\n",
+    "# cmap='RdYlBu_r' oznacza: Wysokie wartości (Norma) = Czerwony, Niskie (Anomalia) = Niebieski\n",
     "plt.contourf(xx, yy, Z, levels=np.linspace(Z.min(), Z.max(), 20), cmap='RdYlBu_r')\n",
-    "# Czerwony = anomalie (niskie wartości), Niebieski = normalne (wysokie wartości)\n",
     "\n",
     "# Rysujemy punkty\n",
     "inliers = X[y_pred == 1]\n",
     "outliers = X[y_pred == -1]\n",
     "\n",
     "plt.scatter(inliers[:, 0], inliers[:, 1], c='white', edgecolor='k', s=20, label='Normalne')\n",
-    "# Dla markera 'x' używamy tylko 'c' (color), bez edgecolor\n",
+    "\n",
+    "# Poprawka: Dla markera 'x' używamy tylko parametru 'c', usuwamy 'edgecolor'\n",
     "plt.scatter(outliers[:, 0], outliers[:, 1], c='red', s=50, marker='x', label='Anomalie')\n",
     "\n",
     "plt.title(\"Isolation Forest Decision Boundary\")\n",
